# Chapterize

./: .gitignore  README.md  example.env  main.py  pyproject.toml
core/: config.py  paths.py  transcription.py
domain/: audio.py  paths.py  video.py
model/: chapter.py  short.py  streamer.py  subtitle_style.py  transcript.py  video_quality.py
prompt/: chapterize_system.md  streamer_detection_system.md
service/: chapterize_transcript.py  detect_streamer.py  download_audio.py  download_video.py  gemini_chapterize.py  generate_subtitle.py  run.py  transcribe_audio.py  transcription.py  youtube_audio.py
utils/: chapter_filter.py  cleanup.py  extract_frames.py  llm_helper.py  load_chapters.py  speaker_color.py
